# TCO-SpokenLanguages2

./: .gitignore  .gitmodules  README.md
scripts/: build_external_libs.sh
src/: CMakeLists.txt  jl_gen_mfcc_feat.jl  mp3decoder.c  py_2_sample_kmeans_extra_trees.py  py_6_sample_kmeans_extra_trees_and_knn_5_5_to_1.py  py_sample_kmeans.py  sh_gen_test_mfcc_6.bat  sh_gen_test_mfcc_7.bat  sh_gen_test_mfcc_7.sh  sh_gen_train_mfcc_6.bat  sh_gen_train_mfcc_7.bat  sh_gen_train_mfcc_7.sh  sh_test_mfcc_6_to_sdc_6136.bat  sh_test_mfcc_6_to_sdc_6137.bat  sh_test_mfcc_7_to_sdc_7137.bat  sh_test_mfcc_7_to_sdc_7137.sh  sh_train_mfcc_6_to_sdc_6136.bat  sh_train_mfcc_7_to_sdc_7137.sh
